# Breadcrumbs

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.kb/: config.toml
.kb/store/: manifest.json
.spec/: repo.json  roles.json
.spec/prompts/: repo-bootstrap.md  spec-driven-development.md  spec-refresh.md
.spec/schemas/: artifact.schema.json  evidence.schema.json  feature.schema.json  root.schema.json  scenarios.schema.json
demo/: sample_conversations.md
ingestion/: README.md  __init__.py  breadcrumbs.db  cairn.db  capture_session.py  export_sessions.py  ingest_chat.py  ingest_dataset_catalog.py  requirements.txt  store.py  write_findings.py
ingestion/transcripts/: 3bd99c8e-8c7a-412f-a716-f532b5adb07c.md  5310ed16-bb1d-468c-958a-6a3935a1ec53.md  54ecc674-7485-4a18-ac95-a3be5f233ec7.md  87dcde65-3337-463b-8a64-28a054697f3a.md  a225961a-1f97-47f1-80cb-fd09144dfa1d.md  chat-a.md  chat-b.md  chat.md  d783a283-74d0-48e2-80ab-42857be73106.md  f0cc6935-53c6-466f-995c-ca97aab5060e.md  sess-2027.md  x.md
schema/: example_finding_extraction.json  graph_schema.sql  mcp_contracts.schema.json  prompt1.json  prompt6.json  prompt7.json  prompt_external.json  seed_findings.json
scripts/: setupref_validate.py
tests/: test_dataset_catalog.py  test_expertise.py  test_export_sessions.py  test_ingest_chat.py  test_knowledge_api.py  test_knowledge_memory.py  test_mcp_server.py  test_mcp_store.py  test_memory_diff_preparation.py  test_migration.py  test_session_identity.py  test_setupref_validate.py  test_surprise.py
ui/: README.md  package-lock.json  package.json
(+67 files in other folders)
