[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breadcrumbs-mcp"
version = "0.4.0"
description = "Breadcrumbs MCP wrapper for the internal research-memory database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.27,<2",
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "playwright>=1.45,<2",
  "python-dotenv>=1.0,<2",
  "fastembed>=0.8,<1",
]

[dependency-groups]
dev = ["pytest>=8.3,<9"]

[project.scripts]
breadcrumbs-mcp = "breadcrumbs.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/breadcrumbs", "ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
